Add debug module with dependency graph visualization.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^2.2.2",
     "boxen": "^5.0.1",
     "compression": "^1.7.4",
     "reflect-metadata": "^0.1.13",
