--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "compression": "^1.7.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "selfsigned": "^1.10.11"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
