Fix some cert issues. Add static page serving with extra build command. Change index page.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+
+    "copyStaticToDistWindows": "xcopy /e /k /h /i /Y web dist\\web",
+    "copyStaticToDistLinux": "cp -r ./web/ ./dist/web/",
+    "start:dev": "npm run copyStaticToDistWindows && nest start --watch",
+    "start:dev:linux": "npm run copyStaticToDistLinux && nest start --watch",
+
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -27,6 +32,7 @@
     "@nestjs/serve-static": "^2.2.2",
     "boxen": "^5.0.1",
     "compression": "^1.7.4",
+    "hbs": "^4.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
