--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "compression": "^1.7.4",
     "fs-extra": "^10.0.0",
     "hbs": "^4.1.2",
+    "js-yaml": "^4.1.0",
     "pkg": "^5.4.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
